--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,7 @@
+# git:
+#   paging:
+#     externalDiffCommand: difft --color=always
 git:
   paging:
-    externalDiffCommand: difft --color=always
+    colorArg: always
+    pager: diff-so-fancy
